--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.ppp</groupId>
     <artifactId>gadgets</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>gadgets</name>
@@ -18,6 +18,11 @@
         <dependency>
             <groupId>com.ppp</groupId>
             <artifactId>common</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ppp</groupId>
+            <artifactId>javaClassBuilder</artifactId>
             <version>1.0</version>
         </dependency>
 
