--- a/javaClassBuilder/pom.xml
+++ b/javaClassBuilder/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ppp</groupId>
-    <artifactId>javaClassMaker</artifactId>
+    <artifactId>javaClassBuilder</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>javaClassMaker</name>
+    <name>javaClassBuilder</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
