--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -8,6 +8,7 @@
     <packaging>jar</packaging>
 
     <name>cli</name>
+    <description>Whoopsunix</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
