--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -38,6 +38,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>PPPYSO-gadget</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
