--- a/javaClassBuilder/pom.xml
+++ b/javaClassBuilder/pom.xml
@@ -21,4 +21,18 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>PPPYSO-javaClassBuilder</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
