--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -36,6 +36,12 @@
             <version>3.2.1</version>
             <!--            <version>3.2.2</version>-->
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>PPPYSO-gadget</finalName>
