--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -42,6 +42,14 @@
             <version>4.0</version>
         </dependency>
         <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+            <!--            <version>1.9.2</version>-->
+<!--                                    <version>1.8.3</version>-->
+            <!--            <version>1.6.1</version>-->
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <!--            <version>1.2.29</version>-->
@@ -87,6 +95,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.14.1</version>
         </dependency>
     </dependencies>
     <build>
