--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.ppp</groupId>
     <artifactId>gadgets</artifactId>
-    <version>1.0</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
 
     <name>gadgets</name>
@@ -83,6 +83,11 @@
             <artifactId>jython-standalone</artifactId>
 <!--            <version>2.5.2</version>-->
                         <version>2.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.beanshell</groupId>
+            <artifactId>bsh</artifactId>
+            <version>2.0b5</version>
         </dependency>
         <dependency>
             <groupId>com.mchange</groupId>
