--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>com.ppp</groupId>
             <artifactId>javaClassBuilder</artifactId>
-            <version>1.0</version>
+            <version>1.0.1</version>
         </dependency>
 
         <!-- gadget dependencies -->
@@ -88,6 +88,12 @@
             <groupId>org.beanshell</groupId>
             <artifactId>bsh</artifactId>
             <version>2.0b5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>2.4.3</version>
+<!--            <version>2.4.4</version>-->
         </dependency>
         <dependency>
             <groupId>com.mchange</groupId>
