--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>clojure</artifactId>
             <version>1.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-impl</artifactId>
+            <version>2.2.9</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -122,6 +127,19 @@
             <version>2.14.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <!-- EL -->
+        <dependency>
+            <groupId>org.mortbay.jasper</groupId>
+            <artifactId>apache-el</artifactId>
+            <version>8.0.27</version>
+        </dependency>
 
         <!-- build dependencies -->
         <dependency>
