--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -110,6 +110,13 @@
             <artifactId>myfaces-impl</artifactId>
             <version>2.2.9</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <classifier>jdk15</classifier>
+            <version>2.4</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
