--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -133,6 +133,11 @@
             <artifactId>log4j-api</artifactId>
             <version>2.14.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>8.5.78</version>
+        </dependency>
 
 
         <dependency>
