--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -116,7 +116,16 @@
             <classifier>jdk15</classifier>
             <version>2.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.1.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>4.1.4.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
