--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -46,7 +46,7 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.4</version>
             <!--            <version>1.9.2</version>-->
-<!--                                    <version>1.8.3</version>-->
+            <!--                                    <version>1.8.3</version>-->
             <!--            <version>1.6.1</version>-->
         </dependency>
         <dependency>
@@ -86,8 +86,8 @@
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
-<!--            <version>2.5.2</version>-->
-                        <version>2.7.3</version>
+            <!--            <version>2.5.2</version>-->
+            <version>2.7.3</version>
         </dependency>
         <dependency>
             <groupId>org.beanshell</groupId>
@@ -98,7 +98,7 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
             <version>2.4.3</version>
-<!--            <version>2.4.4</version>-->
+            <!--            <version>2.4.4</version>-->
         </dependency>
         <dependency>
             <groupId>org.clojure</groupId>
@@ -125,6 +125,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>4.1.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.5</version>
         </dependency>
 
         <dependency>
