--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -131,6 +131,17 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.ceylon-lang</groupId>
+            <artifactId>ceylon.language</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.click</groupId>
+            <artifactId>click-nodeps</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
