--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -141,6 +141,11 @@
             <artifactId>click-nodeps</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.11.Final</version>
+        </dependency>
 
 
         <dependency>
