--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,16 +20,16 @@
             <artifactId>xstream</artifactId>
             <version>1.4.17</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.javassist</groupId>-->
-<!--            <artifactId>javassist</artifactId>-->
-<!--            <version>3.29.2-GA</version>-->
-<!--        </dependency>-->
         <dependency>
-            <groupId>javassist</groupId>
+            <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.12.0.GA</version>
+            <version>3.29.2-GA</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>javassist</groupId>-->
+<!--            <artifactId>javassist</artifactId>-->
+<!--            <version>3.12.0.GA</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
