--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ppp</groupId>
-    <artifactId>cli</artifactId>
-    <version>1.0.3</version>
+    <artifactId>scheduler</artifactId>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
-    <name>cli</name>
+    <name>scheduler</name>
     <description>Whoopsunix</description>
 
     <properties>
@@ -36,7 +36,7 @@
     </dependencies>
 
     <build>
-        <finalName>PPPYSO-cli</finalName>
+        <finalName>PPPYSO</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -56,7 +56,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.ppp.CliScheduler</mainClass>
+                            <mainClass>com.ppp.Scheduler</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -72,7 +72,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.ppp.CliScheduler</mainClass>
+                            <mainClass>com.ppp.Scheduler</mainClass>
                         </manifest>
                     </archive>
                     <finalName>${project.build.finalName}-${version}</finalName>
