--- a/gadgets/pom.xml
+++ b/gadgets/pom.xml
@@ -276,6 +276,7 @@
         </dependency>
 
 
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
@@ -327,6 +328,22 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>weblogic</groupId>
+            <artifactId>coherence</artifactId>
+            <version>12.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>weblogic</groupId>
+            <artifactId>coherence-web</artifactId>
+            <version>12.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>weblogic</groupId>
+            <artifactId>coherence-rest</artifactId>
+            <version>12.2.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>PPPYSO-gadget</finalName>
