1. javaClassMakerEnhance Spel script freeMarker 2. JDK 17+ support by unsafe :)

--- a/scheduler/src/main/resources/PPPConfig.yml
+++ b/scheduler/src/main/resources/PPPConfig.yml
@@ -88,6 +88,10 @@ PPPYSO:
     javaClassType:
     # 用于封装生成的 JavaClass，eg. [FreeMarker]
     javaClassEnhance:
+    # 特殊生成
+    javaClassMakerEnhance:
+    #
+    memShellType:
 
     # 组件
     middleware: Tomcat
